cmake_minimum_required(VERSION 3.10)

#set the project name
project(LeetCode)
set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED True)
#add the executable
add_executable(main main.cpp JZOF/JZ_2_2_AddBinary.h "code daily/LC_338_CountBits.h" "code daily/LC_498_FindDiagonalOrder.h" JZOF/JZ_2_4_SingleNumber.h)
add_executable(daily20220618 "code daily/JZOF_2_29_orderedCycleLinklist.cpp")
add_executable(daily20220622 "code daily/LC_513_findBottomLeftValue.cpp")
add_executable(daily20220623 "code daily/LC_30_findSubstring.cpp")
add_executable(daily20220716 "code daily/JZOF_2_041_MovingAverage.cpp")
add_executable(daily20220719 "code daily/LC_731. My Calendar II.cpp")
add_executable(daily20221104 "LC/LC_25. Reverse Nodes in k-Group.cpp")
add_executable(daily20221124 "code daily/795. Number of Subarrays with Bounded Maximum.cpp")
add_executable(daily20221125 "code daily/809. Expressive Words.cpp")
add_executable(daily20230101 "code daily/2351. First Letter to Appear Twice.cpp")
add_executable(LC1004 "LC/1004. Max Consecutive Ones III.cpp")
add_executable(LC1221 "code daily/1753. Maximum Score From Removing Stones.cpp")
add_executable(weekly20221225 "contest weekly/2022_12_25_325.cpp")
