cmake_minimum_required(VERSION 3.10)

#set the project name
project(LeetCode)
set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED True)
#add the executable
add_executable(main main.cpp JZOF/JZ_2_2_AddBinary.h "code daily/LC_338_CountBits.h" "code daily/LC_498_FindDiagonalOrder.h" JZOF/JZ_2_4_SingleNumber.h)
add_executable(daily20220618 "code daily/JZOF_2_29_orderedCycleLinklist.cpp")
add_executable(daily20220622 "code daily/LC_513_findBottomLeftValue.cpp")
add_executable(daily20220623 "code daily/LC_30_findSubstring.cpp")
add_executable(daily20220716 "code daily/JZOF_2_041_MovingAverage.cpp")
add_executable(daily20220719 "code daily/LC_731. My Calendar II.cpp")
add_executable(daily20221104 "LC/LC_25. Reverse Nodes in k-Group.cpp")
add_executable(daily20221124 "code daily/795. Number of Subarrays with Bounded Maximum.cpp")
add_executable(daily20221125 "code daily/809. Expressive Words.cpp")
add_executable(daily20230101 "code daily/2351. First Letter to Appear Twice.cpp")
add_executable(LC1004 "LC/1004. Max Consecutive Ones III.cpp")
add_executable(LC1221 "code daily/1753. Maximum Score From Removing Stones.cpp")
add_executable(weekly20221225 "contest weekly/2022_12_25_325.cpp")
add_executable(daily20230103 "code daily/2042. Check if Numbers Are Ascending in a Sentence.cpp")
add_executable(test "code daily/test.cpp")
add_executable(weekly20230108 "contest weekly/2023_01_08_327.cpp")
add_executable(LC_43 "LC/43. Multiply Strings.cpp")
add_executable(LC_146 "LC/146. LRU Cache.cpp")
add_executable(LC_1095 "LC/1095. Find in Mountain Array.cpp")
add_executable(LC_221 "LC/221. Maximal Square.cpp")
add_executable(quicksort "code daily/quickSort.cpp")
add_executable(daily20230111 "code daily/2283. Check if Number Has Equal Digit Count and Digit Value.cpp")
add_executable(weekly20230115 "contest weekly/2023_01_15_328.cpp")
add_executable(daily20230115 "code daily/2293. Min Max Game.cpp")
add_executable(daily20230510 "code daily/1015. Smallest Integer Divisible by K.cpp")